# monitor4me

./: .gitattributes  .gitignore  LICENSE  NOTES.md  README.md  install.ps1  latest.json  monitor4me-install.bat  setup.ps1  uninstall.ps1
app/: build-signed.ps1  gen-icon.mjs  index.html  package-lock.json  package.json  vite.config.ts
app/src/: charts.ts  influx.ts  main.ts  store.ts  styles.css  types.ts  ws-client.ts
app/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
collector/: package-lock.json  package.json
collector/src/: anomaly.ts  config.ts  index.ts  influx.ts  lhm.ts  metrics.ts  monitors.ts  notify.ts  runtime-config.ts  ws.ts
grafana/dashboards/: pc-monitor.json
scripts/: fix-startup.ps1  generate-latest-json.ps1  install-app.ps1  package-collector.ps1  package-release.ps1  reset-tasks.ps1  setup-from-source.ps1  setup-influx.ps1  setup-task.ps1  silent-install.ps1  test-lhm.ps1
